--- a/css/styles.css
+++ b/css/styles.css
@@ -70,13 +70,7 @@ ul,
 li {
   display: inline;
 }
-.box-one {
-  width: 270px;
-  height: 70.54px;
-}
-.dis li {
-  display: inline-block;
-}
+
 .font-head li,
 h3 {
   font-family: "Roboto";
@@ -86,10 +80,6 @@ h3 {
   text-transform: uppercase;
 }
 
-.padding-test ul,
-li {
-  padding-top: 90px;
-}
 .font-par h3,
 p {
   font-family: "Roboto";
@@ -98,4 +88,11 @@ p {
   font-size: 14px;
   line-height: 24px;
   color: rgba(117, 117, 117, 1);
+}
+.grid-box {
+  display: grid;
+  grid-template-columns: 20% 20% 20% 20%;
+  margin-left: 215px;
+  margin-right: 215px;
+  margin-top: 94px;
 }
