--- a/css/styles.css
+++ b/css/styles.css
@@ -105,11 +105,11 @@ h2 {
 }
 .grid-box-v2 {
   display: grid;
-  grid-template-columns: 1.15fr 0.9fr 0.9fr 0.9fr 1.15fr;
-  column-gap: 30px;
+  grid-template-columns: repeat(3, 370px);
+  gap: 30px;
+  justify-content: center;
 }
-.item-a {
-  grid-column-start: 2;
+
 }
 .section-2 {
   height: 648px;
@@ -118,15 +118,20 @@ h2 {
 .grid-team {
   display: grid;
   grid-template-columns: repeat(4, 270px);
-  grid-gap: 30px;
+  gap: 30px;
+  justify-content: center;
 }
-.item-b {
-}
+
 .white-box {
   background-color: #fff;
-  width: 270px;
-  height: 368px;
+  width: 100%;
+  height: 100%;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin: 0px;
+}
+figure > img {
+  width: 100%;
+  height: 260px;
 }
