--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,10 @@ body {
   font-family: "Roboto";
   font-style: normal;
 }
+.line-1 hr {
+  border: 1px solid #ececec;
+  margin-top: 30px;
+}
 .nav-style a {
   font-weight: 500;
   font-size: 14px;
@@ -148,16 +152,17 @@ h2 {
 .white-box {
   background-color: #fff;
   width: 100%;
-  height: 100%;
+  height: 368px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   margin: 0px;
 }
-figure > img {
+.img-size figure img {
   width: 100%;
   height: 260px;
 }
+
 footer {
   background-color: #2f303a;
   height: 252px;
@@ -189,4 +194,80 @@ footer {
 }
 address {
   padding-left: 13.4%;
+}
+
+.grid-buttons {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 8px;
+  justify-content: center;
+  display: flex;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+button {
+  height: 38px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border-color: #f5f4fa;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  border: none;
+}
+button:hover {
+  background: #2196f3;
+  color: #ffffff;
+}
+.button1 {
+  width: 73px;
+}
+.button2 {
+  width: 128px;
+}
+.button3 {
+  width: 145px;
+}
+.button4 {
+  width: 103px;
+}
+.button5 {
+  width: 130px;
+}
+.grid-pictures {
+  display: grid;
+  grid-template-columns: repeat(3, 370px);
+  list-style-type: none;
+  justify-content: center;
+  column-gap: 30px;
+}
+.border {
+  box-sizing: border-box;
+  width: 370px;
+  height: 404px;
+  background: #ffffff;
+  border: 1px solid #ececec;
+}
+.section-pic {
+  margin-bottom: 94px;
+}
+.font-style-1 {
+  padding-top: 30px;
+  text-align: center;
+
+  color: #212121;
+}
+.font-style-2 {
+  padding-left: 24px;
+}
+.font-style-3 div {
+  line-height: 30px;
+  letter-spacing: 0.03em;
+  color: #757575;
+  padding-top: 4px;
 }
