--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,6 @@ body {
 }
 .log {
   font-family: "Raleway";
-  font-style: normal;
   font-weight: 700;
   font-size: 26px;
   line-height: 31px;
@@ -34,9 +33,9 @@ body {
 .hover:hover {
   color: #2196f3;
 }
-a l {
+.logo a {
   font-family: "Raleway";
-  font-style: normal;
+
   font-weight: 700;
   font-size: 26px;
   line-height: 31px;
@@ -45,15 +44,15 @@ a l {
   padding-left: 13.4%;
   padding-right: 6%;
 }
-a o {
+.padding-01 {
   padding-left: 3.3%;
   padding-right: 4.3%;
 }
-a m {
+.padding-02 {
   padding-left: 21%;
   padding-right: 3.1%;
 }
-a t {
+.font-color {
   color: rgba(117, 117, 117, 1);
 }
 .nav-block nav {
@@ -86,17 +85,12 @@ h1 {
   height: 50px;
   background-color: #2196f3;
   text-align: center;
-  font-family: "Roboto";
-  font-style: Bold;
   font-size: 16px;
   border: #2196f3;
   filter: drop-shadow(40px 0px 40px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
 }
 h3 {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 700;
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.03em;
@@ -104,9 +98,6 @@ h3 {
   color: #212121;
 }
 p {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
@@ -166,9 +157,6 @@ h2 {
 footer {
   background-color: #2f303a;
   height: 252px;
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
@@ -184,9 +172,6 @@ footer {
   list-style-type: none;
 }
 .a-style a {
-  font-family: "Roboto";
-  font-style: normal;
-  font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
@@ -211,6 +196,7 @@ button {
   border-radius: 4px;
   border-color: #f5f4fa;
   font-family: "Roboto";
+
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
