--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ body {
   letter-spacing: 0.02em;
   color: #212121;
   text-decoration: none;
-  list-style-type: none;
 }
 .nav-style {
   margin-top: 24px;
@@ -211,18 +210,23 @@ button:hover {
 }
 .button1 {
   width: 73px;
+  cursor: pointer;
 }
 .button2 {
   width: 128px;
+  cursor: pointer;
 }
 .button3 {
   width: 145px;
+  cursor: pointer;
 }
 .button4 {
   width: 103px;
+  cursor: pointer;
 }
 .button5 {
   width: 130px;
+  cursor: pointer;
 }
 .grid-pictures {
   display: grid;
