--- a/css/styles.css
+++ b/css/styles.css
@@ -1,58 +1,21 @@
 body {
-  font-family: "Roboto";
-  font-style: normal;
+  font-family: "Roboto", "sans-serif";
+  color: #212121;
 }
-.line-1 hr {
+:root {
+  --main-color: #2196f3;
+}
+.line hr {
   border: 1px solid #ececec;
   margin-top: 30px;
 }
 .nav-style a {
   font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
-  color: #212121;
+  color: inherit;
   text-decoration: none;
-}
-.nav-style {
-  margin-top: 24px;
-}
-.nav-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}
-.log {
-  font-family: "Raleway";
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  color: #2196f3;
-}
-.hover:hover {
-  color: #2196f3;
-}
-.logo a {
-  font-family: "Raleway";
-
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 31px;
-  letter-spacing: 0.03em;
-  color: #2196f3;
-  padding-left: 13.4%;
-  padding-right: 6%;
-}
-.padding-01 {
-  padding-left: 3.3%;
-  padding-right: 4.3%;
-}
-.padding-02 {
-  padding-left: 21%;
-  padding-right: 3.1%;
-}
-.font-color {
-  color: rgba(117, 117, 117, 1);
 }
 .nav-block nav {
   display: inline;
@@ -63,44 +26,69 @@ body {
 .nav-block li {
   display: inline;
 }
-.section-1 {
+.nav-style {
+  margin-top: 24px;
+}
+.hover:hover {
+  color: #2196f3;
+}
+.logo a {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+  padding-left: 13.4%;
+  padding-right: 6%;
+  color: var(--main-color);
+}
+.font-color {
+  color: rgba(117, 117, 117, 1);
+}
+.padding-portfolio {
+  padding-left: 3.3%;
+  padding-right: 4.3%;
+}
+.padding-mail {
+  padding-left: 21%;
+  padding-right: 3.1%;
+}
+.head-section-style {
   background-color: rgba(47, 48, 58, 1);
   height: 600px;
   text-align: center;
 }
-h1 {
+.head-section-style h1 {
   font-weight: 900;
   font-size: 44px;
-  line-height: 60px;
+  line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
   padding-top: 200px;
 }
-.bt {
+.info-section-style h3 {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.info-section-style p {
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: #757575;
+}
+.button-style {
   color: white;
   width: 200px;
   height: 50px;
-  background-color: #2196f3;
+  background-color: var(--main-color);
   text-align: center;
   font-size: 16px;
-  border: #2196f3;
-  filter: drop-shadow(40px 0px 40px rgba(0, 0, 0, 0.15));
+  border: var(--main-color);
   border-radius: 4px;
-}
-h3 {
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #212121;
-}
-p {
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
-  color: #757575;
 }
 .grid-box {
   display: grid;
@@ -111,23 +99,22 @@ p {
   justify-content: center;
   margin-top: 94px;
 }
-h2 {
+.about-us-style h2 {
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
   margin-bottom: 50px;
   padding-top: 94px;
 }
-.grid-box-v2 {
+.grid-box-about-us {
   display: grid;
   grid-template-columns: repeat(3, 370px);
   gap: 30px;
   justify-content: center;
 }
-.section-2 {
+.section-background {
   height: 648px;
   background: #f5f4fa;
   margin-top: 94px;
@@ -138,7 +125,6 @@ h2 {
   gap: 30px;
   justify-content: center;
 }
-
 .white-box {
   background-color: #fff;
   width: 100%;
@@ -152,34 +138,40 @@ h2 {
   width: 100%;
   height: 260px;
 }
-
-footer {
+.font-style-1 {
+  padding-top: 30px;
+  text-align: center;
+}
+.font-style-1 div {
+  color: #757575;
+  padding-top: 10px;
+}
+.footer-background {
   background-color: #2f303a;
   height: 252px;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
   padding-top: 60px;
 }
+.footer-style a {
+  text-decoration: none;
+}
+.footer-style li {
+  text-decoration: none;
+  list-style-type: none;
+  font-style: normal;
+}
 .address-style a {
-  text-decoration: none;
-  list-style-type: none;
-}
-.address-style li {
-  text-decoration: none;
-  list-style-type: none;
-}
-.a-style a {
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-address {
+.address-padding {
   padding-left: 13.4%;
 }
-
 .grid-buttons {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -189,44 +181,49 @@ address {
   margin-top: 100px;
   margin-bottom: 50px;
 }
-button {
+.buttons-style button {
   height: 38px;
   background: #f5f4fa;
   border-radius: 4px;
   border-color: #f5f4fa;
-  font-family: "Roboto";
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.625;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
   border: none;
+  cursor: pointer;
+  font-family: "Roboto";
 }
-button:hover {
+.button-hover:hover {
   background: #2196f3;
   color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.button1 {
+.buttons-style {
+  list-style-type: none;
+}
+.nav {
+  display: inline;
+}
+.nav li {
+  display: inline;
+}
+.all-button {
   width: 73px;
-  cursor: pointer;
 }
-.button2 {
+.web-sites-button {
   width: 128px;
-  cursor: pointer;
 }
-.button3 {
+.apps-button {
   width: 145px;
-  cursor: pointer;
 }
-.button4 {
+.design-button {
   width: 103px;
-  cursor: pointer;
 }
-.button5 {
+.marketing-button {
   width: 130px;
-  cursor: pointer;
 }
 .grid-pictures {
   display: grid;
@@ -235,28 +232,21 @@ button:hover {
   justify-content: center;
   column-gap: 30px;
 }
-.border {
+.img-border {
   box-sizing: border-box;
   width: 370px;
   height: 404px;
   background: #ffffff;
   border: 1px solid #ececec;
 }
-.section-pic {
+.img-margin {
   margin-bottom: 94px;
 }
-.font-style-1 {
-  padding-top: 30px;
-  text-align: center;
-
-  color: #212121;
-}
-.font-style-2 {
+.figcaption-padding {
   padding-left: 24px;
+  padding-top: 20px;
 }
-.font-style-3 div {
-  line-height: 30px;
-  letter-spacing: 0.03em;
+.figcaption-padding div {
+  margin-top: 13px;
   color: #757575;
-  padding-top: 4px;
 }
