--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,44 @@ body {
   color: inherit;
   text-decoration: none;
 }
+.why li {
+  width: 370px;
+}
+.container {
+  width: 1200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: auto;
+  gap: 30px;
+}
+.container-portfolio {
+  width: 1200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: auto;
+  gap: 8px;
+}
+.container-portfolio2 {
+  width: 1200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: auto;
+  flex-wrap: wrap;
+  list-style-type: none;
+  gap: 30px;
+  padding-left: 0px;
+}
+.container-footer {
+  width: 1200px;
+  margin: auto;
+}
+section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 .nav-block nav {
   display: inline;
 }
@@ -41,25 +79,27 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  padding-left: 13.4%;
-  padding-right: 6%;
+  padding-right: 97px;
   color: var(--main-color);
 }
 .font-color {
   color: var(--second-font-color);
 }
 .padding-portfolio {
-  padding-left: 3.3%;
-  padding-right: 4.3%;
+  padding-left: 57px;
+  padding-right: 69px;
 }
-.padding-mail {
-  padding-left: 21%;
-  padding-right: 3.1%;
+.padding-tel {
+  padding-left: 50px;
 }
 .head-section-style {
   background-color: var(--background-color);
   height: 600px;
   text-align: center;
+}
+h1 {
+  margin: auto;
+  padding-bottom: 30px;
 }
 .head-section-style h1 {
   font-weight: 900;
@@ -67,9 +107,9 @@ body {
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
+  padding-top: 104px;
   text-transform: uppercase;
   color: #ffffff;
-  padding-top: 200px;
 }
 .info-section-style h3 {
   font-size: 14px;
@@ -95,40 +135,21 @@ body {
   border-radius: 4px;
   cursor: pointer;
 }
-.grid-box {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  margin-left: 215px;
-  margin-right: 215px;
-  column-gap: 30px;
-  justify-content: center;
-  margin-top: 94px;
+.about-us-style {
+  padding-top: 0px !important;
 }
-.about-us-style h2 {
+h2 {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
-  padding-top: 94px;
-}
-.grid-box-about-us {
-  display: grid;
-  grid-template-columns: repeat(3, 370px);
-  gap: 30px;
-  justify-content: center;
+  margin: auto;
+  padding-bottom: 50px;
 }
 .section-background {
   height: 648px;
   background: #f5f4fa;
-  margin-top: 94px;
-}
-.grid-team {
-  display: grid;
-  grid-template-columns: repeat(4, 270px);
-  gap: 30px;
-  justify-content: center;
 }
 .white-box {
   background-color: #fff;
@@ -173,18 +194,6 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-}
-.address-padding {
-  padding-left: 13.4%;
-}
-.grid-buttons {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 8px;
-  justify-content: center;
-  display: flex;
-  margin-top: 100px;
-  margin-bottom: 50px;
 }
 .buttons-style button {
   height: 38px;
