--- a/css/styles.css
+++ b/css/styles.css
@@ -7,11 +7,6 @@ body {
   --second-font-color: rgba(117, 117, 117, 1);
   --background-color: rgba(47, 48, 58, 1);
 }
-
-.line hr {
-  border: 1px solid #ececec;
-  margin-top: 30px;
-}
 .nav-style a {
   font-weight: 500;
   font-size: 14px;
@@ -19,44 +14,6 @@ body {
   letter-spacing: 0.02em;
   color: inherit;
   text-decoration: none;
-}
-.why li {
-  width: 370px;
-}
-.container {
-  width: 1200px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin: auto;
-  gap: 30px;
-}
-.container-portfolio {
-  width: 1200px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: auto;
-  gap: 8px;
-}
-.container-portfolio2 {
-  width: 1200px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  margin: auto;
-  flex-wrap: wrap;
-  list-style-type: none;
-  gap: 30px;
-  padding-left: 0px;
-}
-.container-footer {
-  width: 1200px;
-  margin: auto;
-}
-section {
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 .nav-block nav {
   display: inline;
@@ -69,6 +26,8 @@ section {
 }
 .nav-style {
   margin-top: 24px;
+  border-bottom: 1px solid #ececec;
+  padding-bottom: 30px;
 }
 .hover:hover {
   color: var(--main-color);
@@ -79,27 +38,17 @@ section {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  padding-right: 97px;
+  padding-left: 13.4%;
+  padding-right: 6%;
   color: var(--main-color);
 }
 .font-color {
   color: var(--second-font-color);
 }
-.padding-portfolio {
-  padding-left: 57px;
-  padding-right: 69px;
-}
-.padding-tel {
-  padding-left: 50px;
-}
 .head-section-style {
   background-color: var(--background-color);
   height: 600px;
   text-align: center;
-}
-h1 {
-  margin: auto;
-  padding-bottom: 30px;
 }
 .head-section-style h1 {
   font-weight: 900;
@@ -107,9 +56,24 @@ h1 {
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
-  padding-top: 104px;
   text-transform: uppercase;
   color: #ffffff;
+  padding-top: 200px;
+  margin: 0;
+}
+.button-style {
+  color: white;
+  font-weight: 700;
+  width: 200px;
+  height: 50px;
+  background-color: var(--main-color);
+  text-align: center;
+  font-size: 16px;
+  line-height: 1.87;
+  border: var(--main-color);
+  border-radius: 4px;
+  cursor: pointer;
+  letter-spacing: 0.06em;
 }
 .info-section-style h3 {
   font-size: 14px;
@@ -123,144 +87,10 @@ h1 {
   letter-spacing: 0.03em;
   color: #757575;
 }
-.button-style {
-  color: white;
-  font-weight: 700;
-  width: 200px;
-  height: 50px;
-  background-color: var(--main-color);
-  text-align: center;
-  font-size: 16px;
-  border: var(--main-color);
-  border-radius: 4px;
-  cursor: pointer;
-}
-.about-us-style {
-  padding-top: 0px !important;
-}
-h2 {
+.about-us-style h2 {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
-  margin: auto;
-  padding-bottom: 50px;
-}
-.section-background {
-  height: 648px;
-  background: #f5f4fa;
-}
-.white-box {
-  background-color: #fff;
-  width: 100%;
-  height: 368px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  margin: 0px;
-}
-.img-size figure img {
-  width: 100%;
-  height: 260px;
-}
-.font-style-1 {
-  padding-top: 30px;
-  text-align: center;
-}
-.font-style-1 div {
-  color: var(--second-font-color);
-  padding-top: 10px;
-}
-.footer-background {
-  background-color: var(--background-color);
-  height: 252px;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  padding-top: 60px;
-}
-.footer-style a {
-  text-decoration: none;
-}
-.footer-style li {
-  text-decoration: none;
-  list-style-type: none;
-  font-style: normal;
-}
-.address-style a {
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-.buttons-style button {
-  height: 38px;
-  background: #f5f4fa;
-  border-radius: 4px;
-  border-color: #f5f4fa;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.625;
-  text-align: center;
-  letter-spacing: 0.03em;
-  border: none;
-  cursor: pointer;
-  font-family: "Roboto";
-}
-.button-hover:hover {
-  background: #2196f3;
-  color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.buttons-style {
-  list-style-type: none;
-}
-.nav {
-  display: inline;
-}
-.nav li {
-  display: inline;
-}
-.all-button {
-  width: 73px;
-}
-.web-sites-button {
-  width: 128px;
-}
-.apps-button {
-  width: 145px;
-}
-.design-button {
-  width: 103px;
-}
-.marketing-button {
-  width: 130px;
-}
-.grid-pictures {
-  display: grid;
-  grid-template-columns: repeat(3, 370px);
-  list-style-type: none;
-  justify-content: center;
-  column-gap: 30px;
-}
-.img-border {
-  box-sizing: border-box;
-  width: 370px;
-  height: 404px;
-  background: #ffffff;
-  border: 1px solid #ececec;
-}
-.img-margin {
-  margin-bottom: 94px;
-}
-.figcaption-padding {
-  padding-left: 24px;
-  padding-top: 20px;
-}
-.figcaption-padding div {
-  margin-top: 13px;
-  color: var(--second-font-color);
 }
