--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,46 @@ body {
   font-family: "Roboto", "sans-serif";
   color: #212121;
 }
+section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+ul {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 0px;
+}
+h3 {
+  margin: 0;
+}
+p {
+  margin: 0;
+}
 :root {
   --main-color: #2196f3;
   --second-font-color: rgba(117, 117, 117, 1);
   --background-color: rgba(47, 48, 58, 1);
+}
+.container {
+  width: 1200px;
+  display: flex;
+  flex-direction: row;
+  margin: auto;
+  gap: 30px;
+}
+.container-footer {
+  width: 1200px;
+  margin: auto;
+}
+.container-portfolio {
+  width: 1200px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: auto;
+  gap: 8px;
 }
 .nav-style a {
   font-weight: 500;
@@ -19,15 +55,20 @@ body {
   display: inline;
 }
 .nav-block ul {
-  display: inline;
+  display: flex;
+  align-items: center;
 }
 .nav-block li {
   display: inline;
 }
 .nav-style {
-  margin-top: 24px;
-  border-bottom: 1px solid #ececec;
-  padding-bottom: 30px;
+  justify-content: space-between;
+  padding-top: 24px;
+  padding-bottom: 25px;
+}
+.line hr {
+  border: 1px solid #ececec;
+  margin: 0;
 }
 .hover:hover {
   color: var(--main-color);
@@ -38,9 +79,8 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-  padding-left: 13.4%;
-  padding-right: 6%;
   color: var(--main-color);
+  padding-right: 97px;
 }
 .font-color {
   color: var(--second-font-color);
@@ -58,7 +98,7 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-  padding-top: 200px;
+  padding-top: 104px;
   margin: 0;
 }
 .button-style {
@@ -75,6 +115,9 @@ body {
   cursor: pointer;
   letter-spacing: 0.06em;
 }
+.info-section-style ul {
+  list-style: none;
+}
 .info-section-style h3 {
   font-size: 14px;
   line-height: 1.14;
@@ -86,6 +129,7 @@ body {
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: #757575;
+  padding-top: 10px;
 }
 .about-us-style h2 {
   font-weight: 700;
@@ -93,4 +137,129 @@ body {
   line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
+}
+.padding-portfolio {
+  padding-left: 57px;
+  padding-right: 69px;
+}
+.padding-tel {
+  padding-left: 50px;
+}
+.about-us-style {
+  padding-top: 0px;
+}
+h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin: auto;
+  padding-bottom: 50px;
+}
+.section-background {
+  height: 648px;
+  background: #f5f4fa;
+}
+.white-box {
+  background-color: #fff;
+  width: 100%;
+  height: 368px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  margin: 0px;
+}
+.img-size figure img {
+  width: 100%;
+  height: 260px;
+}
+.font-style-1 {
+  padding-top: 30px;
+  text-align: center;
+}
+.font-style-1 div {
+  color: var(--second-font-color);
+  padding-top: 10px;
+}
+.footer-background {
+  background-color: var(--background-color);
+  height: 252px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding-top: 60px;
+}
+.footer-style a {
+  text-decoration: none;
+}
+.address-style a {
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.footer-style li {
+  text-decoration: none;
+  list-style-type: none;
+  font-style: normal;
+}
+.buttons-style button {
+  height: 38px;
+  background: #f5f4fa;
+  border-radius: 4px;
+  border-color: #f5f4fa;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.625;
+  text-align: center;
+  letter-spacing: 0.03em;
+  border: none;
+  cursor: pointer;
+  font-family: "Roboto";
+}
+.buttons-style {
+  list-style: none;
+  gap: 8px;
+  justify-content: center;
+}
+.button-padding {
+  padding-left: 22px;
+  padding-right: 22px;
+}
+.img-wrap {
+  flex-wrap: wrap;
+  list-style: none;
+}
+.img-wrap li {
+  width: 370px;
+}
+.figcaption-padding div {
+  padding-top: 13px;
+  color: var(--second-font-color);
+}
+.figcaption-padding {
+  padding-left: 24px;
+  padding-top: 20px;
+}
+.padding-prop {
+  padding-bottom: 0px;
+}
+.padding-settings {
+  padding-top: 50px;
+}
+.box-border {
+  padding: 20px;
+  border-left: 1px solid #ececec;
+  border-right: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
+}
+.no-gap {
+  display: block;
+}
+.img-box {
+  max-width: 370px;
+  margin-left: auto;
+  margin-right: auto;
 }
