--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ body {
   font-family: "Roboto", "sans-serif";
   color: #212121;
 }
-section {
+.section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -87,12 +87,17 @@ p {
   color: var(--main-color);
   padding-right: 97px;
 }
+.logo-color {
+  color: black;
+}
+.footer-logo-color {
+  color: #fff;
+}
 .font-color {
   color: var(--second-font-color);
 }
 .head-section-style {
   background-color: var(--background-color);
-  height: 600px;
   text-align: center;
 }
 .head-section-style h1 {
@@ -103,14 +108,14 @@ p {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-  padding-top: 104px;
   margin: 0;
+  padding-top: 106px;
+  padding-bottom: 30px;
 }
 .button-style {
   color: white;
   font-weight: 700;
   width: 200px;
-  height: 50px;
   background-color: var(--main-color);
   text-align: center;
   font-size: 16px;
@@ -119,6 +124,9 @@ p {
   border-radius: 4px;
   cursor: pointer;
   letter-spacing: 0.06em;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 106px;
 }
 .info-section-style ul {
   list-style: none;
@@ -163,13 +171,11 @@ h2 {
   padding-bottom: 50px;
 }
 .section-background {
-  height: 648px;
   background: #f5f4fa;
 }
 .white-box {
   background-color: #fff;
   width: 100%;
-  height: 368px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -177,7 +183,6 @@ h2 {
 }
 .img-size figure img {
   width: 100%;
-  height: 260px;
 }
 .font-style-1 {
   padding-top: 30px;
@@ -186,15 +191,16 @@ h2 {
 .font-style-1 div {
   color: var(--second-font-color);
   padding-top: 10px;
+  padding-bottom: 30px;
 }
 .footer-background {
   background-color: var(--background-color);
-  height: 252px;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #ffffff;
   padding-top: 60px;
+  padding-bottom: 60px;
 }
 .footer-style a {
   text-decoration: none;
@@ -211,7 +217,8 @@ h2 {
   font-style: normal;
 }
 .buttons-style button {
-  height: 38px;
+  padding-top: 6px;
+  padding-bottom: 6px;
   background: #f5f4fa;
   border-radius: 4px;
   border-color: #f5f4fa;
