--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,9 @@ p {
 .hover:hover {
   color: var(--main-color);
 }
+.hover:focus {
+  color: var(--main-color);
+}
 .button-hover:hover {
   background-color: var(--main-color);
   color: white;
@@ -184,18 +187,19 @@ h2 {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   margin: 0px;
+  padding-bottom: 30px;
 }
 .img-size figure img {
   width: 100%;
 }
-.font-style-1 {
+.font-style-figacaption {
   padding-top: 30px;
   text-align: center;
 }
-.font-style-1 div {
+.font-style-position {
   color: var(--second-font-color);
   padding-top: 10px;
-  padding-bottom: 30px;
+  padding-bottom: 16px;
 }
 .footer-background {
   background-color: var(--background-color);
@@ -278,4 +282,106 @@ h2 {
   max-width: 370px;
   margin-left: auto;
   margin-right: auto;
+}
+.header-svg {
+  padding-right: 10px;
+}
+.hm {
+  width: 100px;
+  height: 250px;
+  color: palevioletred;
+}
+.box::before {
+  content: "czyli jaki ma to kurwa sens";
+  font-size: 40px;
+  color: orange;
+}
+
+.box::after {
+  content: "przeciez to jest utrudnianie sobie zycia";
+  font-size: 30px;
+  color: teal;
+}
+.nav-icon {
+  fill: rgba(117, 117, 117, 1);
+  color: var(--second-font-color);
+  cursor: pointer;
+}
+.nav-icon:hover {
+  fill: var(--main-color);
+  color: var(--main-color);
+}
+.nav-icon:focus-within {
+  fill: var(--main-color);
+  color: var(--main-color);
+}
+.info-icon-background {
+  width: 270px;
+  background-color: rgba(245, 244, 250, 1);
+  display: inline-block;
+  text-align: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+.app-icons {
+  display: inline-block;
+  padding: 12px 12px 12px 12px;
+  fill: rgba(175, 177, 184, 1);
+  cursor: pointer;
+}
+.app-icons:hover {
+  background-color: var(--main-color);
+  border-radius: 50%;
+  fill: white;
+}
+.company-icons {
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  display: inline-block;
+  text-align: center;
+  padding: 16px 32px 16px 32px;
+  fill: rgba(175, 177, 184, 1);
+  cursor: pointer;
+}
+.company-icons:hover {
+  fill: var(--main-color);
+  color: var(--main-color);
+  border: 1px solid var(--main-color);
+}
+.find-us-placement {
+  display: flex;
+  align-items: baseline;
+  padding-bottom: 20px;
+}
+.find-us-style {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  padding-left: 74px;
+}
+.find-us-icons {
+  display: flex;
+}
+.find-us-icons-placment {
+  padding-left: 82px;
+}
+.find-us-app-icons {
+  display: inline-block;
+  padding: 12px 12px 12px 12px;
+  fill: white;
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  line-height: 0;
+  margin-right: 10px;
+}
+.find-us-app-icons:hover {
+  background-color: var(--main-color);
+  border-radius: 50%;
+  fill: white;
 }
