--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,16 @@ p {
 .button-hover:hover {
   background-color: var(--main-color);
   color: white;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+.button-hover:focus {
+  background-color: var(--main-color);
+  color: white;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 .logo a {
   font-family: "Raleway";
@@ -104,6 +114,7 @@ p {
   color: var(--second-font-color);
 }
 .head-section-style {
+  width: 1600px;
   background-image: linear-gradient(
       to bottom,
       rgba(47, 48, 58, 0.4),
@@ -289,6 +300,16 @@ h2 {
   margin-left: auto;
   margin-right: auto;
 }
+.img-box:hover {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.img-box:focus {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 .header-svg {
   padding-right: 10px;
 }
@@ -356,6 +377,11 @@ h2 {
   color: var(--main-color);
   border: 1px solid var(--main-color);
 }
+.company-icons:focus {
+  fill: var(--main-color);
+  color: var(--main-color);
+  border: 1px solid var(--main-color);
+}
 .find-us-placement {
   display: flex;
   align-items: baseline;
@@ -387,6 +413,11 @@ h2 {
   margin-right: 10px;
 }
 .find-us-app-icons:hover {
+  background-color: var(--main-color);
+  border-radius: 50%;
+  fill: white;
+}
+.find-us-app-icons:focus {
   background-color: var(--main-color);
   border-radius: 50%;
   fill: white;
