--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,9 @@ p {
   background-size: cover;
   text-align: center;
 }
+.background-position {
+  text-align: -webkit-center;
+}
 .head-section-style h1 {
   font-weight: 900;
   font-size: 44px;
