--- a/css/styles.css
+++ b/css/styles.css
@@ -77,9 +77,13 @@ p {
 }
 .hover:hover {
   color: var(--main-color);
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hover:focus {
   color: var(--main-color);
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-hover:hover {
   background-color: var(--main-color);
@@ -87,6 +91,8 @@ p {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-hover:focus {
   background-color: var(--main-color);
@@ -94,6 +100,8 @@ p {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo a {
   font-family: "Raleway";
@@ -182,6 +190,32 @@ p {
 .padding-portfolio {
   padding-left: 57px;
   padding-right: 69px;
+}
+.portfolio-visual {
+  position: relative;
+}
+.portfolio-visual::after {
+  content: "";
+  position: absolute;
+  width: 58px;
+  height: 4px;
+  top: 46px;
+  left: 0;
+  background: #2196f3;
+  border-radius: 2px;
+}
+.studio-visual {
+  position: relative;
+}
+.studio-visual::after {
+  content: "";
+  position: absolute;
+  width: 44px;
+  height: 4px;
+  top: 46px;
+  left: 0;
+  background: #2196f3;
+  border-radius: 2px;
 }
 .padding-tel {
   padding-left: 50px;
@@ -304,35 +338,18 @@ h2 {
   margin-left: auto;
   margin-right: auto;
 }
-.img-box:hover {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
+
 .img-box:focus {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-svg {
   padding-right: 10px;
 }
-.hm {
-  width: 100px;
-  height: 250px;
-  color: palevioletred;
-}
-.box::before {
-  content: "czyli jaki ma to kurwa sens";
-  font-size: 40px;
-  color: orange;
-}
 
-.box::after {
-  content: "przeciez to jest utrudnianie sobie zycia";
-  font-size: 30px;
-  color: teal;
-}
 .nav-icon {
   fill: rgba(117, 117, 117, 1);
   color: var(--second-font-color);
@@ -341,10 +358,14 @@ h2 {
 .nav-icon:hover {
   fill: var(--main-color);
   color: var(--main-color);
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .nav-icon:focus-within {
   fill: var(--main-color);
   color: var(--main-color);
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .info-icon-background {
   width: 270px;
@@ -367,6 +388,8 @@ h2 {
   background-color: var(--main-color);
   border-radius: 50%;
   fill: white;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .company-icons {
   border: 1px solid #afb1b8;
@@ -381,6 +404,8 @@ h2 {
   fill: var(--main-color);
   color: var(--main-color);
   border: 1px solid var(--main-color);
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .company-icons:focus {
   fill: var(--main-color);
@@ -421,9 +446,125 @@ h2 {
   background-color: var(--main-color);
   border-radius: 50%;
   fill: white;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .find-us-app-icons:focus {
   background-color: var(--main-color);
   border-radius: 50%;
   fill: white;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is-hidden {
+  pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+}
+.modal {
+  background: rgba(0, 0, 0, 0.2);
+  transition-property: visibility, opacity, transform;
+  opacity: 1;
+  visibility: visible;
+  display: block;
+}
+.overlay-hover:hover .overlay {
+  transform: translatey(0);
+  cursor: pointer;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.overlay-hover:hover .img-box {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  cursor: pointer;
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.box-overlay {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  margin-top: 16px;
+}
+.overlay {
+  position: relative;
+  top: 0;
+  left: 0;
+  transform: translatey(+100%);
+  transition: transform 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--main-color);
+  color: #ffffff;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.55;
+  letter-spacing: 0.03em;
+  opacity: 0.9;
+  width: 100%;
+  height: 294px;
+  padding: 49px 45px 49px 24px;
+}
+.text-about-us {
+  position: absolute;
+  background-color: rgba(47, 48, 58, 0.8);
+  width: 370px;
+  overflow: hidden;
+  color: #ffffff;
+  text-align: center;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  top: 224px;
+}
+.img-position {
+  position: relative;
+}
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 528px;
+  height: 581px;
+  background-color: white;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transform: translate(-50%, -50%) scale(1);
+  transition-property: transform;
+  transition-duration: 1s;
+  transition-timing-function: ease;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.4);
+}
+
+.modal-btn-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: white;
+  border-radius: 50%;
+  cursor: pointer;
 }
