--- a/css/styles.css
+++ b/css/styles.css
@@ -541,23 +541,20 @@ h2 {
   align-items: center;
 }
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
   width: 528px;
   height: 581px;
   background-color: white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  transform: translate(-50%, -50%) scale(1);
   transition-property: transform;
   transition-duration: 1s;
   transition-timing-function: ease;
 }
 
 .backdrop.is-hidden .modal {
-  transform: translate(-50%, -50%) scale(0.4);
+  transform: translate(0%, 0%) scale(0.4);
 }
 
 .modal-btn-close {
