--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 @import "./components/background";
 @import "./components/buttons";
 @import "./components/info";
-@import "./components/about-us";
+@import "./components/what-we-do";
 @import "./components/our-team.scss";
 @import "./components/companies";
 @import "./components/footer";
