--- a/sass/components/_companies.scss
+++ b/sass/components/_companies.scss
@@ -15,6 +15,10 @@
     font-weight: $fontWeight-big;
     font-size: 2.25rem;
     line-height: 2.625rem;
+    padding-bottom: 50px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin: auto;
   }
 }
 .company-icon {
