--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,4 @@
 @import "./components/modal";
 @import "./components/filter-buttons";
 @import "./components/box-list";
+@import "./components/mobile-menu";
