--- a/sass/components/_background.scss
+++ b/sass/components/_background.scss
@@ -2,24 +2,24 @@
   display: flex;
   justify-content: center;
   &__gradient {
-    width: 1600px;
+    width: 100%;
     background-image: linear-gradient(
         to bottom,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url(../images/background.jpg);
+      url(../images/background-mobile.jpg);
     background-size: cover;
     text-align: center;
-    padding-top: 94px;
-    padding-bottom: 94px;
   }
   &__h1 {
     font-family: $fontFamily-roboto;
     font-weight: $fontWeight-huge;
     color: $color-neutral;
-    font-size: 2.75rem;
-    line-height: 3.75rem;
+    font-size: 1.62rem;
+    line-height: 2.62rem;
+    /*font-size: 2.75rem;
+    line-height: 3.75rem;*/
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
