--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -23,11 +23,10 @@
     letter-spacing: 0.06em;
     text-align: center;
   }
-  &--placement-send {
-    padding: 10px 76px 10px 42px;
+  &--send {
+    margin-bottom: 40px;
   }
   &__svg-send {
-    position: absolute;
     margin-left: -50px;
     margin-top: 12px;
   }
