--- a/sass/components/_companies.scss
+++ b/sass/components/_companies.scss
@@ -1,21 +1,23 @@
 .companies {
-  padding-top: 94px;
-  padding-bottom: 94px;
-  width: $width-container;
+  width: auto;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  /*width: $width-container;*/
   margin: auto;
   list-style: none;
   &__display {
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 30px;
-    padding-right: 30px;
+    padding-right: 15px;
+    padding-left: 15px;
   }
   &__heading {
     font-family: $fontFamily-roboto;
     font-weight: $fontWeight-big;
     font-size: 2.25rem;
     line-height: 2.625rem;
-    padding-bottom: 50px;
+    padding-bottom: 30px;
     text-align: center;
     letter-spacing: 0.03em;
     margin: auto;
@@ -29,7 +31,8 @@
   border-radius: 4px;
   display: inline-block;
   text-align: center;
-  padding: 16px 31px 16px 31px;
+  padding-top: 16px;
+  padding-bottom: 16px;
   cursor: pointer;
   transition-property: fill;
   &:hover,
