--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,8 +24,6 @@
   visibility: visible;
   display: block;
   position: relative;
-  width: 528px;
-  height: 581px;
   background-color: $color-neutral;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -33,14 +31,18 @@
   transition-property: transform;
   transition-duration: 1s;
   transition-timing-function: ease;
+  margin-left: 15px;
+  margin-right: 15px;
   &__terms {
     font-family: $fontFamily-roboto;
     font-weight: $fontWeight-small;
-    font-size: 0.875rem;
-    line-height: 1.5rem;
+    font-size: 0.75rem;
+    line-height: 0.875rem;
+    /*font-size: 0.875rem;
+    line-height: 1.5rem;*/
     letter-spacing: 0.03em;
     color: $color-second-font;
-    margin-left: -7px;
+    margin-left: 8px;
   }
   &__link-style {
     color: $color-main;
@@ -138,11 +140,13 @@
   &__comments {
     font-family: $fontFamily-roboto;
     font-weight: $fontWeight-small;
+    width: 100%;
     font-size: 0.75rem;
     line-height: 0.875rem;
     letter-spacing: 0.01em;
     color: $color-second-font;
     padding-left: 40px;
+    padding-right: 40px;
     display: inline-grid;
   }
   &__comments-textarea {
@@ -150,7 +154,6 @@
     border-radius: 4px;
     margin-top: 4px;
     padding: 12px 16px 12px 16px;
-    width: 448px;
     font-family: $fontFamily-roboto;
     font-weight: $fontWeight-small;
     font-size: 0.75rem;
@@ -175,6 +178,8 @@
   padding-top: 20px;
   padding-bottom: 30px;
   display: flex;
+  margin-left: 40px;
+  margin-right: 40px;
   &__style:checked + .checkbox__check-svg {
     opacity: 1;
   }
@@ -182,18 +187,23 @@
     appearance: none;
   }
   &__check-svg {
+    width: 16px;
+    height: 15px;
     opacity: 0;
     position: relative;
-    right: 16px;
     cursor: pointer;
     background-color: $color-main;
     border-radius: 2px;
   }
   &__svg-icon {
+    position: absolute;
     border: 2px solid $color-modal-input-v2;
     width: 16px;
     height: 15px;
-    margin-left: 4px;
     border-radius: 3px;
+    left: 40px;
+  }
+  &__connector {
+    display: flex;
   }
 }
