--- a/sass/components/_background.scss
+++ b/sass/components/_background.scss
@@ -28,3 +28,13 @@
     padding-bottom: 30px;
   }
 }
+@media (min-width: 480px) {
+  .background__gradient {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/background-tablet.jpg);
+  }
+}
