--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,55 +1,30 @@
 .mobile-list {
   display: flex;
   justify-content: space-between;
-}
-
-.menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding-right: 10px;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  border-radius: 50%;
-  outline: none;
-}
-.menu-toggle:hover,
-.menu-toggle:focus {
-  color: $color-main;
-}
-.menu-container .menu-toggle {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  color: #fff;
-}
-/* stylizacja zamykania hamburgera
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  width: 100vw;
-  height: 100vh;
-
-  padding: 32px;
-  background-color: #3f51b5;
-  z-index: 999;
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}*/
-.menu-container.is-open {
-  transform: translateX(0);
-}
-.menu-container .menu-toggle {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  color: black;
+  &__socialmedia {
+    display: flex;
+    list-style-type: none;
+  }
+  &__socialmedia a {
+    font-family: $fontFamily-roboto;
+    font-style: $fontWeight-normal;
+    color: $color-main;
+    font-size: 1.125rem;
+    line-height: 1.375rem;
+    text-decoration: none;
+  }
+  &__border {
+    padding-left: 10px;
+    padding-right: 10px;
+    border-right: 1px solid $color-box-list-border;
+    &--padding {
+      border-right: none;
+      padding-right: 0px;
+    }
+    &--no-padding {
+      padding-left: 0px;
+    }
+  }
 }
 .menu-container {
   position: fixed;
@@ -63,23 +38,45 @@
   z-index: 999;
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  &__toggle {
+    min-height: 40px;
+    min-width: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding-right: 10px;
+    background-color: transparent;
+    cursor: pointer;
+    border: none;
+    border-radius: 50%;
+    outline: none;
+    &:hover,
+    &:focus {
+      color: $color-main;
+    }
+  }
+  &.is-open {
+    transform: translateX(0);
+  }
+  & .menu-container__toggle {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    color: black;
+  }
 }
 .mobile-menu {
   list-style: none;
-}
-.mobile-menu .link {
-  font-family: $fontFamily-roboto;
-  font-weight: $fontWeight-normal;
-  font-size: 2.5rem;
-  line-height: 2.9rem;
-  display: block;
-  padding: 32px;
-  color: black;
-  text-decoration: none;
-}
-@media (min-width: 768px) {
-  .menu-toggle {
-    display: none;
+  & .link {
+    font-family: $fontFamily-roboto;
+    font-weight: $fontWeight-normal;
+    font-size: 2.5rem;
+    line-height: 2.9rem;
+    display: block;
+    padding-bottom: 32px;
+    color: black;
+    text-decoration: none;
   }
 }
 .logo--padding a {
@@ -98,25 +95,8 @@
   margin-top: 32px;
   margin-bottom: 64px;
 }
-.mobile-list__socialmedia {
-  display: flex;
-  list-style-type: none;
-}
-.mobile-list__socialmedia a {
-  font-family: $fontFamily-roboto;
-  font-style: $fontWeight-normal;
-  color: $color-main;
-  font-size: 1.125rem;
-  line-height: 1.375rem;
-  text-decoration: none;
-  margin-bottom: 48px;
-}
-
-.mobile-list__border {
-  padding-left: 10px;
-  padding-right: 10px;
-  border-right: 1px solid $color-box-list-border;
-}
-.mobile-list__border--padding {
-  border-right: none;
+@media (min-width: 480px) {
+  .mobile-list {
+    display: none;
+  }
 }
