--- a/sass/components/_our-team.scss
+++ b/sass/components/_our-team.scss
@@ -66,3 +66,9 @@
     border-radius: 50%;
   }
 }
+@media (min-width: 480px) {
+  .our-team__container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
