--- a/sass/components/_info.scss
+++ b/sass/components/_info.scss
@@ -52,3 +52,10 @@
     grid-template-columns: repeat(2, 1fr);
   }
 }
+@media (min-width: 768px) {
+  .info-section__list-style {
+    grid-template-columns: repeat(4, 1fr);
+    padding-right: 13.41%;
+    padding-left: 13.41%;
+  }
+}
