--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -14,8 +14,8 @@
     text-decoration: none;
   }
   &__border {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 2vw;
+    padding-right: 2vw;
     border-right: 1px solid $color-box-list-border;
     &--padding {
       border-right: none;
@@ -30,8 +30,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  padding-top: 48px;
-  padding-left: 40px;
+  padding-top: 6%;
+  padding-left: 8.33%;
   width: 100%;
   height: 100%;
   background-color: $color-neutral;
@@ -45,7 +45,7 @@
     align-items: center;
     justify-content: center;
     margin: 0;
-    padding-right: 10px;
+    padding-right: 2%;
     background-color: transparent;
     cursor: pointer;
     border: none;
@@ -61,8 +61,8 @@
   }
   & .menu-container__toggle {
     position: absolute;
-    top: 10px;
-    right: 15px;
+    top: 1.25%;
+    right: 1.73%;
     color: black;
   }
 }
@@ -74,7 +74,7 @@
     font-size: 2.5rem;
     line-height: 2.9rem;
     display: block;
-    padding-bottom: 32px;
+    padding-bottom: 4%;
     color: black;
     text-decoration: none;
   }
@@ -89,7 +89,7 @@
   line-height: 2.5rem;
 }
 .navigation--padding {
-  padding-top: 306px;
+  padding-top: 37.9%;
 }
 .contacts__padding {
   margin-top: 32px;
